--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Implementacao do tabnews.com.br para o curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "docker compose -f infra/compose.yaml up -d && next dev",
+    "dev": "npm run services:up && next dev",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "docker:up": "docker compose -f infra/compose.yaml up -d",
-    "docker:down": "docker compose -f infra/compose.yaml down"
+    "services:up": "docker compose -f infra/compose.yaml up -d",
+    "services:stop": "docker compose -f infra/compose.yaml stop",
+    "services:down": "docker compose -f infra/compose.yaml down"
   },
   "author": "",
   "license": "MIT",
